--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "cypress": "^9.3.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-testing-library": "^5.0.4",
     "gh-pages": "^3.2.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
